Fixed /user endpoint return value
